# ofx-plugin

./: CMakeLists.txt  README.md  install.bat
src/: CustomPlugin.cpp  CustomPlugin.cu  CustomPlugin.def  CustomPlugin.hpp
